# learn-opengl

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmakelist.back  openglsublime-project.sublime-workspace
include/glad/: glad.h
src/3d-engine/: 3d-engine.sln
src/3d-engine/3d-engine/: 3d-engine.vcxproj  Shader.h  main.cpp
src/3d-engine/3d-engine/Debug/: main.obj.enc  vc140.idb
src/3d-engine/3d-engine/Debug/3d-engine.tlog/: 3d-engine.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/3d-engine/3d-engine/Release/3d-engine.tlog/: 3d-engine.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/3d-engine/Debug/: 3d-engine.ilk
src/3d-engine/Release/: 3d-engine.iobj  3d-engine.ipdb
src/engine/: CMakeLists.txt  engine.cpp  program.cpp  shader.cpp  vertexBuffer.cpp
src/engine/include/: engine.h  program.h  shader.h  updateFrequency.h  vertexBuffer.h
src/glad/: CMakeLists.txt  glad.c
src/triangles-src/: main.cpp
